objects/Campaign_Asset__c.object
<CustomObject>
    <description>Marketing Campaign Asset</description>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <externalId>true</externalId>
        <label>Asset ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asset_Modified_Date__c</fullName>
        <label>Asset Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Owner__c</fullName>
        <label>Asset Owner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alyssa SARMIENTO</fullName>
                </value>
                <value>
                    <fullName>Anissa Khalid</fullName>
                </value>
                <value>
                    <fullName>Becky H Scheinert</fullName>
                </value>
                <value>
                    <fullName>Bhavisha Oza</fullName>
                </value>
                <value>
                    <fullName>Bob Hogg</fullName>
                </value>
                <value>
                    <fullName>Brendan Dykes</fullName>
                </value>
                <value>
                    <fullName>Cathy Gu</fullName>
                </value>
                <value>
                    <fullName>Chris Horne</fullName>
                </value>
                <value>
                    <fullName>Chris Nguyen</fullName>
                </value>
                <value>
                    <fullName>Dipali Mehta</fullName>
                </value>
                <value>
                    <fullName>Gaby Rastoll</fullName>
                </value>
                <value>
                    <fullName>George Mather</fullName>
                </value>
                <value>
                    <fullName>Guillaume Calot</fullName>
                </value>
                <value>
                    <fullName>Hugh Garber</fullName>
                </value>
                <value>
                    <fullName>Jaclyn Gaudioso-Radvany</fullName>
                </value>
                <value>
                    <fullName>Jess Wells</fullName>
                </value>
                <value>
                    <fullName>Kay Phelps</fullName>
                </value>
                <value>
                    <fullName>Kelly Weinhold</fullName>
                </value>
                <value>
                    <fullName>Kentis Gopalla</fullName>
                </value>
                <value>
                    <fullName>Kourtney Burrows</fullName>
                </value>
                <value>
                    <fullName>Lindsay Frazier</fullName>
                </value>
                <value>
                    <fullName>Lisa Abbott</fullName>
                </value>
                <value>
                    <fullName>Michael Asebrook</fullName>
                </value>
                <value>
                    <fullName>Patricia Lalisan</fullName>
                </value>
                <value>
                    <fullName>Remy Claret</fullName>
                </value>
                <value>
                    <fullName>Rodrigo Costa</fullName>
                </value>
                <value>
                    <fullName>Ron Stevenson</fullName>
                </value>
                <value>
                    <fullName>Scott Kolman</fullName>
                </value>
                <value>
                    <fullName>Sean Murphy</fullName>
                </value>
                <value>
                    <fullName>Stefan Captijn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Title__c</fullName>
        <label>Asset Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADV - Avertorials</fullName>
                </value>
                <value>
                    <fullName>AR - Analyst Report</fullName>
                </value>
                <value>
                    <fullName>AUC - Annual User Conference</fullName>
                </value>
                <value>
                    <fullName>BRO - Brochure</fullName>
                </value>
                <value>
                    <fullName>CI - Competitive Intelligence</fullName>
                </value>
                <value>
                    <fullName>CS - Case Study</fullName>
                </value>
                <value>
                    <fullName>DEM - Demo Video</fullName>
                </value>
                <value>
                    <fullName>EB - eBook</fullName>
                </value>
                <value>
                    <fullName>EXB - Executive Brief</fullName>
                </value>
                <value>
                    <fullName>FAQ - FAQ</fullName>
                </value>
                <value>
                    <fullName>GD - Genesys Day</fullName>
                </value>
                <value>
                    <fullName>GE - Genesys Event</fullName>
                </value>
                <value>
                    <fullName>GS - GSummit</fullName>
                </value>
                <value>
                    <fullName>INF - Infographic</fullName>
                </value>
                <value>
                    <fullName>LW - Live Webinar</fullName>
                </value>
                <value>
                    <fullName>ODW - On-Demand Webinar</fullName>
                </value>
                <value>
                    <fullName>PAN - Product Announcement</fullName>
                </value>
                <value>
                    <fullName>PNL - Partner Newsletter</fullName>
                </value>
                <value>
                    <fullName>PPT - Business Presentation</fullName>
                </value>
                <value>
                    <fullName>PRI - Pricing</fullName>
                </value>
                <value>
                    <fullName>PUG - Partner User Guide</fullName>
                </value>
                <value>
                    <fullName>RFP - RFP</fullName>
                </value>
                <value>
                    <fullName>RR - Research Report</fullName>
                </value>
                <value>
                    <fullName>ST - Sales Tool</fullName>
                </value>
                <value>
                    <fullName>TP - Technical Presentation</fullName>
                </value>
                <value>
                    <fullName>TR - Training</fullName>
                </value>
                <value>
                    <fullName>TS - Tip Sheet</fullName>
                </value>
                <value>
                    <fullName>VDO - Video</fullName>
                </value>
                <value>
                    <fullName>WP - White Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_URL__c</fullName>
        <label>Asset URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Buying_Stage__c</fullName>
        <description>The implied buying stage when this content is consumed.</description>
        <inlineHelpText>The implied buying stage when this content is consumed.</inlineHelpText>
        <label>Buying Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Prospect_Buying_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ASSET_URL__c</fullName>
        <inlineHelpText>DL 1/7/19 Requested by Casey Anderson to mirror existing Asset URL field</inlineHelpText>
        <label>Legacy ASSET URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sponsored_Tags__c</fullName>
        <label>Sponsored-Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1.Recognize Needs</fullName>
                </value>
                <value>
                    <fullName>2.Identify Requirements</fullName>
                </value>
                <value>
                    <fullName>3.Evaluate Options</fullName>
                </value>
                <value>
                    <fullName>4.Resolve Concerns</fullName>
                </value>
                <value>
                    <fullName>5.Purchase Solution</fullName>
                </value>
                <value>
                    <fullName>8x8</fullName>
                </value>
                <value>
                    <fullName>Administrator/GAX/CME</fullName>
                </value>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>Agent Scripting</fullName>
                </value>
                <value>
                    <fullName>Altitude</fullName>
                </value>
                <value>
                    <fullName>Analyst Report</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>AppFoundry</fullName>
                </value>
                <value>
                    <fullName>Aspect</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Benefit Benchmark</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Business Consulting</fullName>
                </value>
                <value>
                    <fullName>Business Edition Cloud</fullName>
                </value>
                <value>
                    <fullName>Business Edition Premise</fullName>
                </value>
                <value>
                    <fullName>Business Optimization</fullName>
                </value>
                <value>
                    <fullName>Business Presentation</fullName>
                </value>
                <value>
                    <fullName>Calabrio</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Progress Detection (CPD)</fullName>
                </value>
                <value>
                    <fullName>Call Qualification/Parking</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>CC Analyzer</fullName>
                </value>
                <value>
                    <fullName>CFO/Purchasing Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ungated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ungated</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Asset_Title__c</columns>
        <columns>Asset_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campaign_Asset_Name</fullName>
        <columns>Asset_Title__c</columns>
        <columns>Asset_Owner__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Campaign Asset Name</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Campaign Asset</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>